<resources>
    <string name="app_name">Traveler</string>
    <string name="icon">Icon</string>

    <!-- en string-pack -->
    <!-- labels for fragments -->
    <string name="menu_profile">Profile</string>
    <string name="menu_main">Feed</string>
    <string name="menu_my_cards">My cards</string>
    <string name="menu_favourites">Favorites</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_big_card">Card</string>
    <string name="menu_create_new_card">Creating a card</string>
    <string name="menu_login">Input</string>
    <string name="menu_registration">Registration</string>

    <!-- login Activity -->
    <string name="activity_login_log_in">Log in</string>
    <string name="activity_login_sign_up">Sign up</string>

    <!-- login -->
    <string name="login_title">Welcome to the Traveler!</string>
    <string name="login_email_tv">Enter email</string>
    <string name="login_email_ev">Email</string>
    <string name="login_empty_email_ev">Enter Email</string>
    <string name="login_password_tv">Enter the password</string>
    <string name="login_password_ev">Password</string>
    <string name="login_empty_password_ev">Enter password</string>
    <string name="login_sign_in">LOG IN</string>
    <string name="login_or">Or</string>
    <string name="login_register">REGISTER</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="login_no_such_user">User with such email is not registered</string>
    <string name="login_some_error">Some error in login, please try again</string>
    <string name="login_inet_request">This app needs internet connection!</string>
    <string name="login_inet_request_quit">Exit</string>
    <string name="login_inet_request_turn_up">Turn up</string>

    <!-- registration -->
    <string name="reg_main_title">Registration</string>
    <string name="reg_title_first_name">Name</string>
    <string name="reg_title_empty_first_name">Enter name</string>
    <string name="reg_title_second_name">Last name</string>
    <string name="reg_title_empty_second_name">Enter last name</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="reg_genders_error">Please, select your gender</string>
    <string name="reg_title_email">Email</string>
    <string name="reg_title_empty_email">Enter Email</string>
    <string name="reg_title_invalid_email">Invalid Email</string>
    <string name="reg_title_password">Password</string>
    <string name="reg_title_empty_password">Enter password</string>
    <string name="reg_title_password_repeat">Repeat the password</string>
    <string name="reg_title_password_repeat_not_match">Passwords don\'t match</string>
    <string name="reg_title_date_of_birth">Date of birth</string>
    <string name="reg_title_empty_date_of_birth">Enter date of birth</string>
    <string name="reg_title_invalid_date_of_birth">Invalid date of birth (dd.mm.yyyy)</string>
    <string name="reg_title_phone_number">Phone number</string>
    <string name="reg_title_empty_phone_number">Enter phone number</string>
    <string name="reg_title_invalid_phone_number">Invalid phone number</string>
    <string name="reg_title_social_contacts">How to contact you?</string>
    <string name="reg_btn_register">REGISTRATION</string>
    <string-array name="genders">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="reg_error">Registration failed, try again.</string>
    <string name="reg_error_email_exist">User with same Email is already exists.</string>
    <string name="reg_some_error">Something went wrong. Check internet connection and try again.</string>
    <string name="reg_required_social">Social contacts are required</string>
    <string name="reg_required_phone">Phone number is required</string>
    <string name="reg_required_birth">Birth date is required</string>
    <string name="reg_required_password">Password is required</string>
    <string name="reg_required_email">Email is required</string>
    <string name="reg_required_second_name">Second name is required</string>
    <string name="reg_required_name">Name is required</string>
    <string name="reg_invalid_phone">Please provide your correct phone number</string>
    <string name="reg_invalid_birth">Please provide your correct birth date</string>
    <string name="reg_dont_confirm_pass">Passwords don\'t confirm</string>
    <string name="reg_not_long_password">Min password length should be of 6 characters!</string>
    <string name="reg_invalid_email">Please provide your valid Email</string>

    <!-- main -->
    <string name="main_search">Search</string>
    <string name="main_search_text">Write text</string>

    <!-- profile -->
    <string name="profile_first_name">Name</string>
    <string name="profile_second_name">Last name</string>
    <string name="profile_phone_number">Phone</string>
    <string name="profile_email">Mail</string>
    <string name="profile_is_male">Gender</string>
    <string name="profile_date_of_birth">Birthday</string>
    <string name="profile_contacts">Social contacts</string>
    <string name="profile_description_photo">Your photo</string>
    <string name="profile_btn_update_photo">Update photo</string>
    <string name="profile_error">Something went wrong, try again, please.</string>
    <string name="profile_photo_break">Seems like you canceled photo selection, don\'t forget to pick it:)</string>
    <string name="profile_photo_can_not">Please allow us to upload photo from your gallery</string>
    <string name="profile_btn_edit">EDIT</string>
    <string name="profile_btn_save_new_sc">SAVE</string>

    <!-- create new card (cnc) -->
    <string name="cnc_city">City</string>
    <string name="cnc_upload">UPLOAD</string>
    <string name="cnc_description_photo">Add a photo</string>
    <string name="cnc_country">Country</string>
    <string name="cnc_address">Address</string>
    <string name="cnc_money">Board</string>
    <string name="cnc_few_information">Brief information</string>
    <string name="cnc_many_information">Full information</string>
    <string name="cnc_hashtags">Hashtags</string>
    <string name="cnc_btn_add_card">ADD CARD</string>
    <!-- if there is error -->
    <string name="cnc_city_error">Please, write city name</string>
    <string name="cnc_city_error_length">City name cannot be more than 200 letters!</string>
    <string name="cnc_country_error">Please, write country name</string>
    <string name="cnc_country_error_length">Country name cannot be more than 100 letters!</string>
    <string name="cnc_address_error">Please, write address</string>
    <string name="cnc_address_error_length">Address name cannot be more than 200 letters!</string>
    <string name="cnc_few_information_error">Brief information</string>
    <string name="cnc_few_information_error_length">Length of short description must be less than 150 letters!</string>
    <string name="cnc_many_information_error">Full information</string>
    <string name="cnc_many_information_error_length">Length of description must be less than 200 letters!</string>
    <string name="cnc_hashtags_error">Hashtags</string>
    <string name="cnc_hashtags_error_length">Hashtags length must be less than 250 letters! (*try to delete whitespaces)</string>
    <string name="cnc_photo_addition_error">Do not forget to choose photo!:)</string>
    <string name="cnc_all_data_error">Card cannot be created: check the correctness of the filled data.</string>

    <!-- large card view (cbv) -->
    <string name="cbv_name_of_city">Singapore</string>
    <string name="cbv_name">Name</string>
    <string name="cbv_second_name">Last name</string>
    <string name="cbv_description_photo">Card photo</string>
    <string name="cbv_social_contacts_null">Contacts:</string>
    <string name="cbv_social_contacts">Contacts</string>
    <string name="cbv_text_from_author">text from the author</string>
    <string name="cbv_add_to_favourites">Add to favourites</string>

    <!-- my card big -->
    <string name="delete">Delete card</string>

    <!-- card list item visitor (cliv) -->
    <string name="cliv_name_of_city">Singapore</string>
    <string name="cliv_dop_info">progress city</string>

    <!-- map -->
    <string name="error_permission_map">permission denied</string>
    <string name="addToFavorite">in plans</string>
    <string name="alreadyInFavorite">already in the plans</string>
    <string name="map_crop_error">Check if your geolocation is on or wait a second</string>
    <string name="map_ok">apply</string>
    <string name="map_bt_find_me">Find me</string>
    <string name="map_no_name">No name info</string>
    <string name="map_dist">Dist: </string>
    <string name="map_warning">[WARNING] </string>
    <string name="map_please_accept">Geolocation is needed for map to work properly</string>
    <string name="map_accept">Allow</string>

    <!-- settings -->
    <string name="settings_language">Change the language</string>
</resources>