<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.registration.RegistrationFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_reg_title_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_main_title" />

            <TextView
                android:id="@+id/tv_reg_title_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_first_name" />

            <EditText
                android:id="@+id/et_reg_field_firs_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_first_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_reg_title_second_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_second_name" />

            <EditText
                android:id="@+id/et_reg_field_second_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/reg_title_second_name" />

            <TextView
                android:id="@+id/tv_reg_title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_email" />

            <EditText
                android:id="@+id/et_reg_field_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_reg_title_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_password" />

            <EditText
                android:id="@+id/et_reg_field_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_reg_title_password_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_password_repeat" />

            <EditText
                android:id="@+id/et_reg_field_password_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_reg_title_date_of_birt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_date_of_birth" />

            <EditText
                android:id="@+id/et_reg_field_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_date_of_birth_hint"
                android:inputType="date" />

            <TextView
                android:id="@+id/tv_reg_title_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_phone_number" />

            <EditText
                android:id="@+id/et_reg_field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_title_phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/bt_reg_register_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>