<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:padding="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/main_widget_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/card_background">


        <TextView
            android:id="@+id/tv_name_of_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cliv_name_of_city"
            android:textAppearance="@style/text_style_3" />

        <LinearLayout
            android:id="@+id/avatar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_avatar_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@drawable/singap"
                android:contentDescription="@string/cbv_description_photo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dop_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cliv_dop_info"
                android:textAppearance="@style/text_style_1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>