<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_1"
    tools:context=".presentation.fragment.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_profile_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_second_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_avatar" />

    <TextView
        android:id="@+id/tv_profile_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_second_name"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile_avatar"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_first_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_first_name" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="272dp"
        android:src="@drawable/phone_icon"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/tv_profile_phone"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/is_male_icon"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.423" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/birthday_icon"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="372dp"
        android:src="@drawable/mail_icon"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/tv_profile_birthday_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_date_of_birth_null"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/tv_profile_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/profile_date_of_birth"
        android:textAppearance="@style/text_style_1"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_birthday_null" />

    <TextView
        android:id="@+id/tv_profile_is_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/profile_is_male"
        android:textAppearance="@style/text_style_1"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_is_male_null" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_is_male_null"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_phone_number"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_email"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_profile_is_male_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_is_male_null"
        android:textAppearance="@style/text_style_2"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_birthday_null"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="117dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="51dp" />

</androidx.constraintlayout.widget.ConstraintLayout>